tests/resource/valid/definition/assign_with_match_different_types.mamba
class MyClass
class MyClass1
class MyClass2

def a:= match 40
    2 => MyClass()
    4 => MyClass1()
    _ => MyClass2()
