tests/resource/invalid/type/definition/tuple_modify_mut.mamba
class MyClass
    def my_field: Int := 10


def fin (a, b) := (MyClass(), 10)
b := 20
